Header component test updates

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -2,9 +2,9 @@
   <button mat-icon-button>
     <mat-icon>menu</mat-icon>
   </button>
-  <span>Angular Example Application</span>
+  <span id="header-title">Angular Example Application</span>
   <span class="flex-auto"></span>
-  <button mat-icon-button>
-    <mat-icon (click)="onInfoClick()">info</mat-icon>
+  <button id="header-info-button" mat-icon-button>
+    <mat-icon id="header-info-icon" (click)="onInfoClick()">info</mat-icon>
   </button>
 </mat-toolbar>
